--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["hikisuu", "moji", "sato", "tanaka", "toroku"]
+  "cSpell.words": ["hikisuu", "moji", "sato", "tanaka", "toroku"],
+  "editor.tabSize": 2
 }
